tests/baselines/reference/parserRealSource5.errors.txt
==== tests/cases/compiler/parserRealSource5.ts (10 errors) ====
    // Copyright (c) Microsoft. All rights reserved. Licensed under the Apache License, Version 2.0. 
    // See LICENSE.txt in the project root for complete license information.
    
    ///<reference path='typescript.ts' />
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! parserRealSource5.ts(4,1): error TS5007: Cannot resolve referenced file: 'typescript.ts'.
    
    module TypeScript {
        // TODO: refactor indent logic for use in emit
        export class PrintContext {
            public builder = "";
            public indent1 = "  ";
            public indentStrings: string[] = [];
            public indentAmt = 0;
    
            constructor (public outfile: ITextWriter, public parser: Parser) {
                                         ~~~~~~~~~~~
!!! parserRealSource5.ts(14,38): error TS2095: Cannot find name 'ITextWriter'.
                                                                     ~~~~~~
!!! parserRealSource5.ts(14,66): error TS2095: Cannot find name 'Parser'.
            }
    
            public increaseIndent() {
                this.indentAmt++;
            }
    
            public decreaseIndent() {
                this.indentAmt--;
            }
    
            public startLine() {
                if (this.builder.length > 0) {
                    CompilerDiagnostics.Alert(this.builder);
                    ~~~~~~~~~~~~~~~~~~~
!!! parserRealSource5.ts(27,17): error TS2095: Cannot find name 'CompilerDiagnostics'.
                }
                var indentString = this.indentStrings[this.indentAmt];
                if (indentString === undefined) {
                    indentString = "";
                    for (var i = 0; i < this.indentAmt; i++) {
                        indentString += this.indent1;
                    }
                    this.indentStrings[this.indentAmt] = indentString;
                }
                this.builder += indentString;
            }
    
            public write(s) {
                this.builder += s;
            }
    
            public writeLine(s) {
                this.builder += s;
                this.outfile.WriteLine(this.builder);
                this.builder = "";
            }
    
        }
    
        export function prePrintAST(ast: AST, parent: AST, walker: IAstWalker) {
                                         ~~~
!!! parserRealSource5.ts(52,38): error TS2095: Cannot find name 'AST'.
                                                      ~~~
!!! parserRealSource5.ts(52,51): error TS2095: Cannot find name 'AST'.
                                                                   ~~~~~~~~~~
!!! parserRealSource5.ts(52,64): error TS2095: Cannot find name 'IAstWalker'.
            var pc: PrintContext = <PrintContext>walker.state;
    
            ast.print(pc);
            pc.increaseIndent();
            return ast;
        }
    
    
        export function postPrintAST(ast: AST, parent: AST, walker: IAstWalker) {
                                          ~~~
!!! parserRealSource5.ts(61,39): error TS2095: Cannot find name 'AST'.
                                                       ~~~
!!! parserRealSource5.ts(61,52): error TS2095: Cannot find name 'AST'.
                                                                    ~~~~~~~~~~
!!! parserRealSource5.ts(61,65): error TS2095: Cannot find name 'IAstWalker'.
            var pc: PrintContext = <PrintContext>walker.state;
            pc.decreaseIndent();
            return ast;
        }
    }